--- a/Swiggy_Data_Analysis_.ipynb
+++ b/Swiggy_Data_Analysis_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1UrzKTd/XVv3obPn0kUcm",
+      "authorship_tag": "ABX9TyOe9PT7pKF7YBWhTe3Z2/uh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,19 +29,31 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/kajal53/Swiggy-Data-Analysis.git"
+        "# !git clone https://github.com/kajal53/Swiggy-Data-Analysis.git"
       ],
       "metadata": {
-        "id": "gFzcscXxDsOv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gFzcscXxDsOv",
+        "outputId": "04eda00b-d257-4fec-ce40-423d5e66cab4"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'Swiggy-Data-Analysis' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ],
       "metadata": {
         "id": "ZgqbDtvVFqaO"
@@ -51,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "uOSwasN7bw63"
       },
@@ -82,7 +94,7 @@
         "id": "hMTN7rQFcVyC",
         "outputId": "61ee1eef-d58b-4fd6-b6fc-5ff53f762555"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +532,7 @@
         "id": "d2Vior7Zc4h5",
         "outputId": "d5198280-796f-46c4-f368-fdb3892bd387"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
