--- a/Swiggy_Data_Analysis_.ipynb
+++ b/Swiggy_Data_Analysis_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGHPjMbFvIqRrzR5qjZx7/",
+      "authorship_tag": "ABX9TyOe9PT7pKF7YBWhTe3Z2/uh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,16 +28,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# !git clone https://github.com/kajal53/Swiggy-Data-Analysis.git"
+      ],
       "metadata": {
-        "id": "gFzcscXxDsOv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gFzcscXxDsOv",
+        "outputId": "04eda00b-d257-4fec-ce40-423d5e66cab4"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'Swiggy-Data-Analysis' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
+      ],
       "metadata": {
         "id": "ZgqbDtvVFqaO"
       },
@@ -46,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "uOSwasN7bw63"
       },
